--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,9 @@ apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
-//buildscript {
-//    repositories {
-//        mavenCentral()
-//    }
-//}
-
 dependencies {
     compile 'org.seleniumhq.selenium:selenium-java:3.12.0'
     compile 'org.seleniumhq.selenium:selenium-api:3.12.0'
-    compile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.testng', name: 'testng', version: '6.14.3'
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
     compile group: 'net.lightbody.bmp', name: 'browsermob-core', version: '2.1.5'
@@ -30,8 +23,8 @@ test {
     useTestNG(){
         suites "TestNG.xml"
         options {
-            parallel = 'methods'
-            threadCount = 3
+            parallel = 'classes'
+            threadCount = 2
         }
         //set TestNG output dir
         outputDirectory = file("$project.buildDir//testngOutput")
