enhanced test logging

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ repositories {
 
 // use this test task on all the plugins wherver the published jar will be used.
 test {
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+    }
     useTestNG(){
         suites "TestNG.xml"
         options {
