--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ jdk:
 #script: ./gradlew clean test
 
 #zalenium
-script: ./gradlew clean test -PdockerSetup=zalenium -DREMOTE_DRIVER=true
+#script: ./gradlew clean test -PdockerSetup=zalenium -DREMOTE_DRIVER=true
 
 #selenoid
-#script: ./gradlew clean test -PdockerSetup=selenoid -DREMOTE_DRIVER=true
+script: ./gradlew clean test -PdockerSetup=selenoid -DREMOTE_DRIVER=true
